# AIRobotUI

./: .gitignore  AGENTS.md  README.md  airobotui.bat  build.bat  config.py  config_ui.py  icon.py  logger.py  main.pyw  main_window.py  process_mgr.py  pyproject.toml  single_instance.py  startup.py  tray_ui.py
.github/workflows/: format-check.yml  release.yml  test.yml
docs/superpowers/plans/: 2026-05-16-airobotui-implementation.md  2026-05-16-airobotui-refactor.md  2026-05-17-crash-restart-recovery.md  2026-05-17-open-webui-tray.md  2026-05-20-generic-process-manager-and-llama.md  2026-05-21-rename-to-trayforge.md  2026-05-21-trayforge-quality-improvements.md  2026-05-22-comfyui-gen-skill.md  2026-05-22-singleton-cleanup-split.md  2026-05-23-cli-control.md  2026-05-23-headless-mode.md
docs/superpowers/specs/: 2026-05-16-airobotui-refactor-design.md  2026-05-16-qqrobot-process-controller-design.md  2026-05-17-crash-restart-recovery-design.md  2026-05-17-open-webui-tray-design.md  2026-05-20-generic-process-manager-and-llama.md  2026-05-21-rename-to-trayforge-design.md  2026-05-21-trayforge-quality-improvements-design.md  (+4 more)
src/: app_controller.py  cli.py  config.py  config_ui.py  headless_controller.py  http_server.py  icon.py  logger.py  main.pyw  main_window.py  process_mgr.py  single_instance.py  startup.py  tray_ui.py  trayforge_types.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_ui.py  test_headless_controller.py  test_http_server.py  test_integration.py  test_logger.py  test_main_window.py  test_process_mgr.py  test_startup.py
