[project]
name = "airobotui"
version = "0.1.0"
description = "Windows system tray controller for NapCat QQ and AstrBot"
requires-python = ">=3.11"
dependencies = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "pyinstaller>=6.0.0",
]

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
